// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderTitle> renders HeaderTitle correctly 1`] = `
<DocumentFragment>
  <div
    class="af-title-bar af-title-bar--sticky"
  >
    <div
      class="container af-title-bar__wrapper"
    >
      <div
        class="burger-container"
      >
        <a
          aria-controls="mainmenu"
          aria-haspopup="true"
          class="btn af-title-bar__mobile-menu af-btn--circle"
          href="/#"
          id="togglemenu"
          role="button"
          tabindex="0"
          title="Toggle menu"
        >
          <i
            class="glyphicon glyphicon-menu-hamburger"
          />
        </a>
      </div>
      <h1
        class="af-title-bar__title"
      >
        Toolkit Axa
        <span
          class="af-title-bar__subtitle"
        >
          Info complémentaire
        </span>
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<HeaderTitle> renders HeaderTitle correctly without menu 1`] = `
<DocumentFragment>
  <div
    class="af-title-bar af-title-bar--sticky"
  >
    <div
      class="container af-title-bar__wrapper"
    >
      <h1
        class="af-title-bar__title"
      >
        Toolkit Axa
        <span
          class="af-title-bar__subtitle"
        >
          Info complémentaire
        </span>
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<HeaderTitle> renders HeaderTitle with classModifier 1`] = `
<DocumentFragment>
  <div
    class="af-title-bar af-title-bar--test af-title-bar--sticky"
  >
    <div
      class="container af-title-bar__wrapper"
    >
      <h1
        class="af-title-bar__title"
      >
        Toolkit Axa
        <span
          class="af-title-bar__subtitle"
        >
          Info complémentaire
        </span>
      </h1>
    </div>
  </div>
</DocumentFragment>
`;
